Fix the #dump link.

--- a/templates/usage.html
+++ b/templates/usage.html
@@ -265,7 +265,7 @@ have the score id</strong>.</p>
 </table>
 </div>
 
-<h3 class="op-title"><a id="restore-score">GET /$$APPID/dump</a></h3>
+<h3 class="op-title"><a id="dump">GET /$$APPID/dump</a></h3>
 <div class="op-content">
 <h4>Dump all scores</h4>
 <p>Dumps all deleted and undeleted scores in the database for your app in JSON
