Fix a typo in the live example.

--- a/templates/usage.html
+++ b/templates/usage.html
@@ -145,7 +145,7 @@ make it public.
 ]
 </pre>
 
-<p>Live example: <a href="/lenna-dev1/list?filter=board,justhedungeons&filter=win,true&sort=duration&order=desc&count=50&filter=mods,">/lenna-dev1/list?filter=board,justhedungeons&filter=win,true&sort=duration&order=desc&count=50&filter=mods,</a></p>
+<p>Live example: <a href="/lenna-dev1/list?filter=board,justthedungeons&filter=win,true&sort=duration&order=desc&count=50&filter=mods,">/lenna-dev1/list?filter=board,justthedungeons&filter=win,true&sort=duration&order=desc&count=50&filter=mods,</a></p>
 </div>
 
 <h2>Write operations</h2>
