Move config into a separate file.

--- a/templates/usage.html
+++ b/templates/usage.html
@@ -1,3 +1,4 @@
+$def with (admin_email)
 <html>
 <head><title>Lead &raquo; REST API Reference</title></head>
 <style>
@@ -97,7 +98,7 @@ make it public.
 </ul>
 
 <p>To request some keys for your game, contact
-<a href="mailto:bytten.games@gmail.com">bytten.games@gmail.com</a>.</p>
+<a href="mailto:$admin_email">$admin_email</a>.</p>
 
 <h2>Read operations</h2>
 
