Put config.json into .gitignore so people don't accidentally commit it and expose their passwords

--- a/templates/usage.html
+++ b/templates/usage.html
@@ -295,8 +295,7 @@ sparingly.</p>
 
 
 <div class="footer">
-&copy; 2014 <a href="http://twitter.com/tccoxon">Tom Coxon</a> -
-<a href="http://bytten.net/">bytten.net</a>.
+&copy; 2014-2019 <a href="http://bytten-studio.com/">Bytten Studio Ltd.</a>
 </div>
 </body>
 </html>
